--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,14 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.0"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true 
+  ios: true
+  image_path: "assets/images/icon.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -28,6 +34,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+   - assets/images/icon.png
    - assets/images/care-logo.png
    - assets/images/home-red.png
    - assets/images/edit.png
@@ -36,6 +43,7 @@ flutter:
    - assets/images/back.png
    - assets/images/bg.png
    - assets/images/splash.png
+   - assets/images/locationPointer.png
    
   #  - assets/images/a_dot_ham.jpeg
 
