--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   splashscreen: ^1.2.0
   flutter_inappbrowser: 1.1.1
   url_launcher: 5.0.2
+  shared_preferences: 0.5.1+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
